--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.46",
+    "@babel/runtime": "^7.0.0-beta.47",
     "babel-runtime": "^6.26.0",
+    "drizzle": "^1.1.5",
+    "drizzle-react": "^1.1.1",
+    "eth-block-tracker-es5": "^2.3.2",
     "eth-ens-namehash": "^2.0.8",
-    "material-ui": "^0.20.0",
-    "meteor-node-stubs": "^0.3.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-swipeable-views": "^0.12.12",
+    "material-ui": "^0.20.1",
+    "meteor-node-stubs": "^0.3.3",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-swipeable-views": "^0.12.13",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {}
