--- a/package.json
+++ b/package.json
@@ -5,19 +5,15 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.47",
-    "babel-runtime": "^6.26.0",
-    "drizzle": "^1.1.5",
-    "drizzle-react": "^1.1.1",
+    "@material-ui/core": "^1.2.2",
+    "@material-ui/icons": "^1.1.0",
     "eth-block-tracker-es5": "^2.3.2",
     "eth-ens-namehash": "^2.0.8",
     "material-ui": "^0.20.1",
     "meteor-node-stubs": "^0.3.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-swipeable-views": "^0.12.13",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-swipeable-views": "^0.12.14",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {}
