--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@material-ui/core": "^1.2.2",
+    "@babel/runtime": "^7.0.0-beta.51",
+    "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
+    "classnames": "^2.2.6",
+    "cryptocompare": "^0.5.0",
     "eth-block-tracker-es5": "^2.3.2",
     "eth-ens-namehash": "^2.0.8",
     "material-ui": "^0.20.1",
     "meteor-node-stubs": "^0.3.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-swipeable-views": "^0.12.14",
+    "recompose": "^0.27.1",
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {}
