--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "extension",
+  "name": "gratiis-extension",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "meteor run"
-  },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.52",
-    "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
+    "@babel/runtime": "^7.0.0-beta.56",
+    "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
+    "ajv": "^6.5.2",
     "classnames": "^2.2.6",
+    "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
     "eth-ens-namehash": "^2.0.8",
-    "material-ui": "^0.20.1",
+    "lodash": "^4.17.10",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-swipeable-views": "^0.12.14",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4",
+    "react-swipeable-views": "^0.12.16",
     "recompose": "^0.27.1",
     "web3": "^1.0.0-beta.34"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {}
 }
