--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
     "eth-ens-namehash": "^2.0.8",
+    "get-pixels": "^3.3.2",
     "lodash": "^4.17.10",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
