--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "@babel/runtime": "^7.0.0-beta.56",
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
-    "ajv": "^6.5.2",
+    "ajv": "^6.5.4",
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
     "eth-ens-namehash": "^2.0.8",
     "get-pixels": "^3.3.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4",
-    "react-swipeable-views": "^0.12.16",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "^2.0.0",
+    "react-swipeable-views": "^0.12.18",
     "recompose": "^0.27.1",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +28,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
