--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
     "ajv": "^6.5.4",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
@@ -16,10 +17,13 @@
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-chartjs-2": "^2.7.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.5.2",
     "react-scripts": "^2.0.0",
     "react-swipeable-views": "^0.12.18",
     "recompose": "^0.27.1",
+    "typeface-roboto": "0.0.54",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
