--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.56",
+    "@babel/runtime": "^7.1.2",
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
     "ajv": "^6.5.4",
-    "chart.js": "^2.7.2",
+    "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
@@ -16,11 +16,11 @@
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.7.0-alpha.0",
     "react-chartjs-2": "^2.7.4",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.5.2",
-    "react-scripts": "^2.0.0",
+    "react-dom": "^16.7.0-alpha.0",
+    "react-scripts": "^2.1.1",
     "react-swipeable-views": "^0.12.18",
     "recompose": "^0.27.1",
     "typeface-roboto": "0.0.54",
