--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.5.0",
+    "ecb-currency-converter": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
     "get-pixels": "^3.3.2",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0-alpha.0",
+    "react": "^16.7.0-alpha.2",
     "react-chartjs-2": "^2.7.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0-alpha.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "^2.1.1",
     "react-swipeable-views": "^0.12.18",
     "recompose": "^0.27.1",
+    "redux": "^4.0.1",
     "typeface-roboto": "0.0.54",
     "web3": "^1.0.0-beta.36"
   },
