Fixed double tooltip bug. Updated deps, fixed breaking changes

--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.2.0",
-    "@material-ui/core": "^3.8.2",
+    "@babel/runtime": "^7.3.4",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "ajv": "^6.6.2",
-    "chart.js": "^2.7.3",
+    "ajv": "^6.10.0",
+    "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
-    "cryptocompare": "^0.7.1",
+    "cryptocompare": "^0.7.2",
     "ecb-currency-converter": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-tx": "^1.3.7",
     "get-pixels": "^3.3.2",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0-alpha.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-redux": "^6.0.0",
-    "react-scripts": "^2.1.3",
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-scripts": "^2.1.8",
     "react-swipeable-views": "^0.12.18",
     "recompose": "^0.27.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54",
-    "web3": "^1.0.0-beta.37"
+    "web3": "^1.0.0-beta.46"
   },
   "scripts": {
     "start": "react-scripts start",
