--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --verbose=false",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "fetch-mock": "^7.3.1",
+    "ganache-cli": "^6.4.3",
+    "redux-mock-store": "^1.5.3"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
