--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "ajv": "^6.10.0",
+    "asn1.js": "github:indutny/asn1.js",
+    "bn.js": "^4.11.8",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "create-react-app": "^1.5.2",
     "cryptocompare": "^0.7.2",
     "ecb-currency-converter": "^1.0.0",
+    "elliptic": "^6.4.1",
     "eth-ens-namehash": "^2.0.8",
     "get-pixels": "^3.3.2",
+    "jws": "^3.2.2",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
+    "node-forge": "^0.8.2",
     "pkipay-blockchain": "github:JonahGroendal/pkipay-blockchain",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
