--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Gratiis",
+  "name": "PkiPay",
   "description": "",
   "version": "1.0",
 
@@ -18,7 +18,9 @@
     "activeTab",
     "notifications",
     "downloads",
-    "storage"
+    "storage",
+    "https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml",
+    "https://min-api.cryptocompare.com/data/*"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval' 'sha256-5As4+3YpY62+l38PsxCEkjB1R4YtyktBtRScTJ3fyLU='; object-src 'self'"
 }
