--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "@ensdomains/ens": "github:JonahGroendal/ens",
-    "@material-ui/core": "^4.2.1",
+    "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
     "classnames": "^2.2.6",
     "cryptocompare": "^0.7.2",
     "dns-on-ens": "github:JonahGroendal/dns-on-ens",
     "ecb-currency-converter": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
-    "lodash": "^4.17.11",
-    "node-forge": "^0.8.2",
+    "lodash": "^4.17.15",
+    "node-forge": "^0.8.5",
     "node-rsa": "^1.0.5",
     "pkipay-blockchain": "github:JonahGroendal/pkipay-blockchain",
     "prop-types": "^15.7.2",
@@ -32,16 +32,16 @@
     "react-redux": "^6.0.1",
     "react-scripts": "^2.1.8",
     "react-swipeable-views": "^0.12.18",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54",
-    "web3": "^1.0.0-beta.55",
+    "web3": "^1.2.0",
     "x509-forest-of-trust": "github:JonahGroendal/x509-forest-of-trust"
   },
   "devDependencies": {
-    "fetch-mock": "^7.3.1",
-    "ganache-cli": "^6.4.3",
+    "fetch-mock": "^7.3.9",
+    "ganache-cli": "^6.5.0",
     "redux-mock-store": "^1.5.3",
     "web-ext": "^3.1.1"
   },
