Added Token card. Changed functionality of Donate card.

--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
+    "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "cryptocompare": "^0.7.2",
-    "dns-on-ens": "github:JonahGroendal/dns-on-ens",
+    "dns-over-ens": "github:JonahGroendal/dns-over-ens",
     "ecb-currency-converter": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.15",
@@ -27,6 +28,7 @@
     "pkipay-blockchain": "github:JonahGroendal/pkipay-blockchain",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
