Renamed background page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
   },
   "background": {
     "scripts": [
-      "scheduledTransactions.js"
+      "transactionSender.js"
     ]
   },
   "permissions": [
