Broke 2 apis into their own repos. Fixed bug were DnsChallengeScreen unmounts.

--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
+    "acme-easy": "github:JonahGroendal/acme-easy",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
     "dns-over-ens": "github:JonahGroendal/dns-over-ens",
     "ecb-currency-converter": "^1.0.0",
     "eth-ens-namehash": "^2.0.8",
     "lodash": "^4.17.15",
-    "node-forge": "^0.8.5",
-    "node-rsa": "^1.0.5",
     "pkipay-blockchain": "github:JonahGroendal/pkipay-blockchain",
     "prop-types": "^15.7.2",
     "qrcode": "^1.4.2",
